--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <!--
-        Copyright 2014 Red Hat, Inc. and/or its affiliates.
+        Copyright 2014,2015 Red Hat, Inc. and/or its affiliates.
 
         Licensed under the Apache License, Version 2.0 (the "License");
         you may not use this file except in compliance with the License.
@@ -171,7 +171,7 @@
                     <dependency>
                         <groupId>org.apache.cassandra</groupId>
                         <artifactId>cassandra-all</artifactId>
-                        <version>2.0.4</version>
+                        <version>2.0.11</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -208,7 +208,7 @@
         <dependency>
             <groupId>com.datastax.cassandra</groupId>
             <artifactId>cassandra-driver-core</artifactId>
-            <version>2.0.0-rc2</version>
+            <version>2.1.4</version>
             <exclusions>
                 <!-- slf cfg : force use of logback backend instead of c*'s preferred log4j -->
                 <exclusion>
@@ -218,11 +218,42 @@
             </exclusions>
         </dependency>
 
-        <!-- alalytics lib. https://github.com/clearspring/stream-lib -->
+        <!-- analytics lib. https://github.com/clearspring/stream-lib -->
         <dependency>
             <groupId>com.clearspring.analytics</groupId>
             <artifactId>stream</artifactId>
             <version>2.5.0</version>
+        </dependency>
+
+        <!-- distributed log server http://kafka.apache.org -->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.9.2</artifactId>
+            <version>0.8.1.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.sun.jmx</groupId>
+                    <artifactId>jmxri</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jdmk</groupId>
+                    <artifactId>jmxtools</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!-- date/time handling lib http://www.joda.org/joda-time/ -->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+        <!-- metrics library https://github.com/dropwizard/metrics -->
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+            <version>3.1.0</version>
         </dependency>
 
     </dependencies>
