--- a/pom.xml
+++ b/pom.xml
@@ -103,8 +103,8 @@
                 <version>3.1</version>
                 <configuration>
                     <fork>true</fork>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <encoding>UTF-8</encoding>
 
                     <excludes>
@@ -239,6 +239,10 @@
                     <groupId>com.sun.jdmk</groupId>
                     <artifactId>jmxtools</artifactId>
                 </exclusion>
+		<exclusion>
+		    <groupId>javax.jms</groupId>
+		    <artifactId>jms</artifactId>
+		</exclusion>
             </exclusions>
         </dependency>
 
